--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,6 @@
-{
+{"ConnectionStrings":{
+  "DefaultConnection": "Data Source = PortalRandkowy.db"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
